[package]
name = "ssh_proxy"
version = "0.1.0"
edition = "2021"
description = "SSH Proxy Gateway for security auditing and access control"

[[bin]]
name = "ssh_proxy"
path = "src/main.rs"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[dependencies]
# SSH protocol
russh = "0.46"
russh-keys = "0.46"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
argon2 = { version = "0.5", features = ["std", "password-hash", "rand"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
